--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿absl-py==2.1.0
+absl-py==2.1.0
 aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.3.1
@@ -21,7 +21,7 @@ colorama==0.4.6
 colorlog==6.8.2
 contextlib2==21.6.0
 contourpy==1.1.1
-cplex==22.1.0.1
+cplex==22.1.0.0
 cryptography==42.0.5
 cycler==0.12.1
 dill==0.3.8
@@ -121,6 +121,7 @@ watchdog==4.0.0
 webencodings==0.5.1
 Werkzeug==3.0.2
 xlrd==2.0.1
+XlsxWriter==3.2.0
 yarl==1.11.1
 yfinance==0.2.37
 zipp==3.18.1
